// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> renders a spinner 1`] = `
<img
  aria-label="loading spinner"
  height="40px"
  src="spinner-brand.gif"
  width="40px"
/>
`;

exports[`<Spinner /> renders negative 1`] = `
<img
  aria-label="loading spinner"
  height="40px"
  src="spinner-negative.gif"
  width="40px"
/>
`;

exports[`<Spinner /> renders small 1`] = `
<img
  aria-label="loading spinner"
  height="20px"
  src="spinner-brand.gif"
  width="20px"
/>
`;
